Display model: Handle its icon in property panel
#1021